--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,4 +8,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./src ./src
 
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
+EXPOSE 8080
+
+WORKDIR /app/src
+
+CMD ["flask", "--app", "main", "--debug", "run", "--host", "0.0.0.0", "--port", "8080"]
