--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.dev
-    container_name: python-app-dev
+    container_name: python-app:dev
     command: uvicorn src.main:app --host 0.0.0.0 --port 8080 --reload
     ports:
       - 8080:8080
